--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+package-lock.json
+yarn.lock
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
@@ -23,7 +26,8 @@ coverage
 *.lcov
 
 # nyc test coverage
-.nyc_output
+/.nyc_output
+/coverage
 
 # Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
@@ -102,3 +106,14 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Editor files
+*~
+*.sw[nop]
+/.vscode
+
+# Output
+dist
+
+# MacOS
+.DS_Store
