--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "description": "A Typescript/Javascript isomorphic library template, for use in the browser, Node.js, and React Native.",
   "version": "0.0.1",
   "scripts": {
-    "test": "npm run standard && npm run test-mocha",
+    "test": "npm run lint && npm run test-mocha",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "build": "npm run clear && tsc -p tsconfig.json && ./build-dist.sh",
     "test-mocha": "cross-env NODE_ENV=test TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'test/*.ts'",
-    "standard": "standard --fix",
     "prepare": "npm run build",
     "clear": "rimraf dist/*",
     "rebuild": "npm run clear && npm run build"
@@ -36,9 +37,15 @@
     "chai": "^4.3.4",
     "cross-env": "^7.0.3",
     "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-promise": "^4.3.1",
     "mocha": "^8.3.2",
     "nyc": "^15.1.0",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
