Set up karma tests.

--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "description": "A Typescript/Javascript isomorphic library template, for use in the browser, Node.js, and React Native.",
   "version": "0.0.1",
   "scripts": {
-    "test": "npm run lint && npm run test-mocha",
+    "build": "npm run clear && tsc -p tsconfig.json && ./build-dist.sh",
+    "clear": "rimraf dist/*",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "build": "npm run clear && tsc -p tsconfig.json && ./build-dist.sh",
-    "test-mocha": "cross-env NODE_ENV=test TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'test/*.ts'",
     "prepare": "npm run build",
-    "clear": "rimraf dist/*",
-    "rebuild": "npm run clear && npm run build"
+    "rebuild": "npm run clear && npm run build",
+    "test": "npm run lint && npm run test-node",
+    "test-karma": "karma start karma.conf.js",
+    "test-node": "cross-env NODE_ENV=test TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'test/*.ts'"
   },
   "files": [
     "dist",
@@ -43,6 +44,13 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^4.3.1",
+    "karma": "^6.3.2",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-mocha": "^2.0.1",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-sourcemap-loader": "^0.3.8",
+    "karma-typescript": "^5.5.1",
     "mocha": "^8.3.2",
     "nyc": "^15.1.0",
     "prettier": "^2.2.1",
