--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,7 @@ on: [push]
 jobs:
   test-node:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     strategy:
       matrix:
         node-version: [14.x]
@@ -19,6 +20,22 @@ jobs:
         run: npm run test-node
         env:
           CI: true
+  test-karma:
+    runs-on: ubuntu-latest
+#    needs: [lint]
+    timeout-minutes: 10
+    strategy:
+      matrix:
+        node-version: [14.x]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm install
+      - name: Run karma tests
+        run: npm run test-karma
   lint:
     runs-on: ubuntu-latest
     strategy:
@@ -31,5 +48,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm install
-      - name: Run Standard.js linter
-        run: npm run standard
+      - name: Run eslint
+        run: npm run lint
