--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   ],
   "main": "dist/index.js",
   "module": "dist/esm/index.js",
+  "browser": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
