--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     },
     "./package.json": "./package.json"
   },
-  "dependencies": {},
   "devDependencies": {
     "@types/chai": "^4.3.3",
     "@types/mocha": "^10.0.0",
@@ -57,6 +56,9 @@
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "mocha": {
     "require": "ts-node/register",
