--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,18 @@
   "include": [
     "src/**/*",
     ".eslintrc.js",
-    "typings/index.d.ts",
     "karma.conf.js"
   ],
   "exclude": [
     "./test/",
     "./node_modules/",
     "./dist/"
+  ],
+  "ts-node": {
+    "files": true
+  },
+  "files": [
+    "src/declarations.d.ts"
   ],
   "compileOnSave": true,
   "compilerOptions": {
@@ -37,7 +42,7 @@
     /* Strict Type-Checking Options */
     "strict": true,                           /* Enable all strict type-checking options. */
     "skipDefaultLibCheck": true,
-    // "noImplicitAny": true,                 /* Raise error on expressions and declarations with an implied 'any' type. */
+     "noImplicitAny": false,                 /* Raise error on expressions and declarations with an implied 'any' type. */
     // "strictNullChecks": true,              /* Enable strict null checks. */
     // "strictFunctionTypes": true,           /* Enable strict checking of function types. */
     // "strictPropertyInitialization": true,  /* Enable strict checking of property initialization in classes. */
@@ -55,7 +60,7 @@
     // "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
     // "paths": {},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
-    // "typeRoots": [],                       /* List of folders to include type definitions from. */
+//    "typeRoots": [],                        /* List of folders to include type definitions from. */
     // https://github.com/microsoft/TypeScript/wiki/Performance#controlling-types-inclusion:
     "types": ["mocha", "node"],               /* Type declaration files to be included in compilation. */
     "allowSyntheticDefaultImports": true,     /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
