--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     ".": {
       "require": "./dist/index.js",
       "import": "./dist/esm/index.js"
-    }
+    },
+    "./package.json": "./package.json"
   },
   "dependencies": {},
   "devDependencies": {
@@ -58,6 +59,9 @@
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "mocha": {
     "require": "ts-node/register",
