--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "description": "A Typescript/Javascript isomorphic library template, for use in the browser, Node.js, and React Native.",
   "version": "0.0.1",
   "scripts": {
-    "build": "npm run clear && tsc -p tsconfig.json",
+    "build": "npm run clear && tsc -d && tsc -p tsconfig.json",
     "clear": "rimraf dist/*",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "prepare": "npm run build",
+    "prettier": "prettier src --write",
     "rebuild": "npm run clear && npm run build",
     "test": "npm run lint && npm run test-node",
     "test-karma": "karma start karma.conf.js",
@@ -15,34 +16,27 @@
   },
   "files": [
     "dist",
-    "src",
     "README.md",
     "LICENSE.md"
   ],
-  "module": "dist/index.js",
-  "browser": "dist/index.js",
+  "main": "dist/index.js",
+  "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js"
-    },
-    "./package.json": "./package.json"
-  },
   "devDependencies": {
-    "@types/chai": "^4.3.3",
-    "@types/mocha": "^10.0.0",
-    "@types/node": "^18.11.0",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
-    "chai": "^4.3.6",
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.11.10",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "chai": "^4.3.7",
     "cross-env": "^7.0.3",
-    "eslint": "^8.25.0",
+    "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.1.0",
+    "eslint-plugin-promise": "^6.1.1",
     "karma": "^6.4.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.1",
@@ -51,11 +45,10 @@
     "karma-sourcemap-loader": "^0.3.8",
     "karma-typescript": "^5.5.3",
     "mocha": "^10.1.0",
-    "nyc": "^15.1.0",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.3"
   },
   "publishConfig": {
     "access": "public"
@@ -68,8 +61,7 @@
     "spec": "test/**/*.ts"
   },
   "keywords": [
-    "interop",
-    "alliance"
+    "dcc"
   ],
   "engines": {
     "node": ">=16.0"
