--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "A Typescript/Javascript isomorphic library template, for use in the browser, Node.js, and React Native.",
   "version": "0.0.1",
   "scripts": {
-    "build": "npm run clear && tsc -d && tsc -p tsconfig.json",
+    "build": "npm run clear && tsc -d && tsc -p tsconfig.esm.json",
     "clear": "rimraf dist/*",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
