--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -3,13 +3,12 @@
     "strict": true,
     "target": "es2020",
     "lib": ["es2020"],
-    "module": "commonjs",
+    "module": "es6",
     "moduleResolution": "node",
-    "outDir": "dist",
+    "outDir": "dist/esm",
     "noImplicitAny": true,
     "removeComments": false,
     "preserveConstEnums": true,
-    "resolveJsonModule": true,
     "baseUrl": ".",
   },
   "include": [
