--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -2,19 +2,25 @@
   "compilerOptions": {
     "strict": true,
     "target": "es2020",
-    "lib": ["es2020"],
+    "lib": ["es2020", "dom"],
     "module": "es6",
     "moduleResolution": "node",
-    "outDir": "dist/esm",
+    "outDir": "dist",
     "noImplicitAny": true,
     "removeComments": false,
     "preserveConstEnums": true,
     "baseUrl": ".",
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true
+  },
+  "ts-node": {
+    "files": true
   },
   "include": [
     "src/**/*",
     ".eslintrc.js",
     "karma.conf.js"
   ],
-  "exclude": ["test", "node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "test"]
 }
