--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "strict": true,
-    "target": "es2020",
-    "lib": ["es2020", "dom"],
+    "target": "es2022",
+    "lib": ["es2022", "dom"],
     "module": "es6",
     "moduleResolution": "node",
     "outDir": "dist",
@@ -22,5 +22,5 @@
     ".eslintrc.js",
     "karma.conf.js"
   ],
-  "exclude": ["node_modules", "dist", "test"]
+  "exclude": ["node_modules", "dist"]
 }
