--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "strict": true,
-    "target": "es2020",
-    "lib": ["es2020", "dom"],
+    "target": "es2022",
+    "lib": ["es2022", "dom"],
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "dist/esm",
@@ -12,18 +12,15 @@
     "baseUrl": ".",
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true,
-    "types": ["node", "mocha"],
-    "typeRoots": ["src/declarations.d.ts"]
+    "resolveJsonModule": true
   },
   "ts-node": {
     "files": true
   },
   "include": [
     "src/**/*",
-    "test/*.ts",
     ".eslintrc.js",
     "karma.conf.js"
   ],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "test"]
 }
