--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
   "main": "dist/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
-  "dependencies": {
-  },
   "devDependencies": {
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
@@ -36,6 +34,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^24.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
@@ -66,7 +65,7 @@
     "dcc"
   ],
   "engines": {
-    "node": ">=16.0"
+    "node": ">=20.0"
   },
   "author": {
     "name": "Digital Credentials Consortium",
