Drop CommonJS export in build. ESM only.
Signed-off-by: Dmitri Zagidulin <dzagidulin@gmail.com>

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "A Typescript/Javascript isomorphic library template, for use in the browser, Node.js, and React Native.",
   "version": "0.0.1",
   "scripts": {
-    "build": "npm run clear && tsc -d && tsc -p tsconfig.esm.json",
+    "build": "npm run clear && tsc -d",
     "clear": "rimraf dist/*",
     "lint": "ts-standard --fix --project tsconfig.spec.json",
     "prepare": "npm run build",
@@ -17,10 +17,9 @@
     "README.md",
     "LICENSE.md"
   ],
-  "main": "dist/index.js",
-  "module": "dist/esm/index.js",
-  "browser": "dist/esm/index.js",
-  "types": "dist/esm/index.d.ts",
+  "module": "dist/index.js",
+  "browser": "dist/index.js",
+  "types": "dist/index.d.ts",
   "dependencies": {
   },
   "devDependencies": {
