--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,12 @@
     "strict": true,
     "target": "es2022",
     "lib": ["es2022", "dom"],
-    "module": "commonjs",
+    "module": "es6",
     "moduleResolution": "node",
-    "outDir": "dist/",
+    "outDir": "dist",
     "sourceMap": true,
-    "declaration": false,
+    "declaration": true,
+    "declarationMap": true,
     "noImplicitAny": true,
     "removeComments": false,
     "preserveConstEnums": true,
@@ -22,7 +23,6 @@
   },
   "include": [
     "src/**/*",
-    "test/**/*",
     ".eslintrc.js",
     "karma.conf.js"
   ],
